OIS curricula scraper ready.